force-app/main/default/objects/Study_Grading_Scheme__c/Study_Grading_Scheme__c.object-meta.xml
<CustomObject>
    <description>Academic grading scheme.</description>
    <label>Study Grading Scheme</label>
    <nameField>
        <label>Study Grading Scheme Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Study Grading Scheme</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>