force-app/main/default/objects/Study_Grading_Scheme__c/fields/Display_in_Wizard__c.field-meta.xml
<CustomField>
    <fullName>Display_in_Wizard__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Display the grading scheme as a picklist option in the grading wizard.</description>
    <inlineHelpText>Display the grading scheme as a picklist option in the grading wizard.</inlineHelpText>
    <label>Display in Wizard</label>
    <type>Checkbox</type>
</CustomField>