force-app/main/default/objects/Study_Grading_Scheme__c/fields/Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Status__c</fullName>
    <description>The completion status for individual enrollment.</description>
    <inlineHelpText>The completion status for individual enrollment.</inlineHelpText>
    <label>Enrollment Status</label>
    <length>60</length>
    <type>Text</type>
</CustomField>