force-app/main/default/objects/Study_Grading_Scheme__c/fields/Exclude_Credits_Earned__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Credits_Earned__c</fullName>
    <description>Set the Exclude Credits Earned on individual enrollment. Leave blank if you don&apos;t want the completion engine to overwrite the existing value on individual enrollment.</description>
    <inlineHelpText>Set the Exclude Credits Earned on individual enrollment. Leave blank if you don&apos;t want the completion engine to overwrite the existing value on individual enrollment.</inlineHelpText>
    <label>Exclude Credits Earned</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>