force-app/main/default/objects/Study_Grading_Scheme__c/fields/For_Fail_Absent__c.field-meta.xml
<CustomField>
    <fullName>For_Fail_Absent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>For Fail Absent</label>
    <type>Checkbox</type>
</CustomField>