force-app/main/default/objects/Study_Grading_Scheme__c/fields/Grade_Points__c.field-meta.xml
<CustomField>
    <fullName>Grade_Points__c</fullName>
    <description>Set the Grade Points on individual enrollment. Leave blank if you don&apos;t want the completion engine to overwrite the existing value on individual enrollment.</description>
    <inlineHelpText>Set the Grade Points on individual enrollment. Leave blank if you don&apos;t want the completion engine to overwrite the existing value on individual enrollment.</inlineHelpText>
    <label>Grade Points</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>