force-app/main/default/objects/Study_Grading_Scheme__c/fields/Grade_Result__c.field-meta.xml
<CustomField>
    <fullName>Grade_Result__c</fullName>
    <description>Set the Grade Result on individual enrollment. Leave blank if you don&apos;t want the completion engine to overwrite the existing value on individual enrollment.</description>
    <inlineHelpText>Set the Grade Result on individual enrollment. Leave blank if you don&apos;t want the completion engine to overwrite the existing value on individual enrollment.</inlineHelpText>
    <label>Grade Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grade_Result</valueSetName>
    </valueSet>
</CustomField>