force-app/main/default/objects/Study_Grading_Scheme__c/fields/Letter_Grade__c.field-meta.xml
<CustomField>
    <fullName>Letter_Grade__c</fullName>
    <description>Set the Letter Grade on individual enrollment. Leave blank if you don&apos;t want the completion engine to overwrite the existing value on individual enrollment.</description>
    <inlineHelpText>Set the Letter Grade on individual enrollment. Leave blank if you don&apos;t want the completion engine to overwrite the existing value on individual enrollment.</inlineHelpText>
    <label>Letter Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Letter_Grade</valueSetName>
    </valueSet>
</CustomField>