force-app/main/default/objects/Study_Grading_Scheme__c/fields/Letter_Grade_Scoring_Range__c.field-meta.xml
<CustomField>
    <fullName>Letter_Grade_Scoring_Range__c</fullName>
    <description>The value from numerical grade range to be used when grading by letter value.</description>
    <label>Letter Grade Scoring Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Higher Range</fullName>
                <default>true</default>
                <label>Higher Range</label>
            </value>
            <value>
                <fullName>Lower Range</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>