force-app/main/default/objects/Study_Grading_Scheme__c/fields/Numerical_Grade_Higher_Range__c.field-meta.xml
<CustomField>
    <fullName>Numerical_Grade_Higher_Range__c</fullName>
    <description>Set the Numerical Grade on individual enrollment. Leave blank if you don&apos;t want the completion engine to overwrite the existing value on individual enrollment.</description>
    <inlineHelpText>Set the Numerical Grade on individual enrollment. Leave blank if you don&apos;t want the completion engine to overwrite the existing value on individual enrollment.</inlineHelpText>
    <label>Numerical Grade Higher Range</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>