force-app/main/default/objects/Study_Grading_Scheme__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The order for the grading scheme to be considered in completion engine.</description>
    <inlineHelpText>The order for the grading scheme to be considered in completion engine.</inlineHelpText>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>