force-app/main/default/objects/Study_Grading_Scheme__c/fields/Study_Grade_Setting__c.field-meta.xml
<CustomField>
    <fullName>Study_Grade_Setting__c</fullName>
    <label>Study Grade Setting</label>
    <referenceTo>Study_Grade_Setting__c</referenceTo>
    <relationshipLabel>Study Grading Scheme</relationshipLabel>
    <relationshipName>Study_Grading_Scheme</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>